--- a/TP1-Mod5-Chat/Views/Shared/_Layout.cshtml
+++ b/TP1-Mod5-Chat/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
                     <li>@Html.ActionLink("À propos de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Chats", "Index", "Chat")</li>
                 </ul>
             </div>
         </div>
@@ -32,6 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
+      
             <p>&copy; @DateTime.Now.Year - Mon application ASP.NET</p>
         </footer>
     </div>
