--- a/TP1-Mod5-Chat/Views/Chat/Index.cshtml
+++ b/TP1-Mod5-Chat/Views/Chat/Index.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.Couleur)
         </td>
         <td>
-            @Html.ActionLink("Details", "Details/"+item.Id) | @Html.ActionLink("Delete","Delete/"+item.Id)
+            @Html.ActionLink("Details", "Details", new { id = item.Id }) | @Html.ActionLink("Delete","Delete",new { id = item.Id })
         </td>
        
     </tr>
