--- a/TP2-Mod5-Pizza/Views/Pizza/Create.cshtml
+++ b/TP2-Mod5-Pizza/Views/Pizza/Create.cshtml
@@ -1,4 +1,6 @@
 ﻿@model TP2_Mod5_Pizza.Models.PizzaIngredientPateVM
+@using TP2_Mod5_Pizza.Helpers
+
 @{
     ViewBag.Title = "Create";
 }
@@ -6,50 +8,15 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>Pizza</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.pizza.Nom, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.pizza.Nom, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.pizza.Nom, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.pizza.Pate, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.IdPate, Model.Pates.Select(x => new SelectListItem()
-            {
-                Text = x.Nom,
-                Value = x.Id.ToString()
-            }), new { htmlAttributes = new { @class = "form-control" } })
 
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.pizza.Ingredients, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.ListBoxFor(model => model.Ingredients, Model.Ingredients.Select(x => new SelectListItem()
-            {
-                Text = x.Nom,
-                Value = x.Id.ToString()
-            }), new { htmlAttributes = new { @class = "form-control" } })
+    <div class="form-horizontal">
+        @Html.Partial("_PizzaDisplay")
 
-        </div>
+        @Html.CustomSubmit("Create")
     </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
-</div>
 }
 
 <div>
@@ -59,3 +26,4 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
