--- a/TP2-Mod5-Pizza/Views/Pizza/Delete.cshtml
+++ b/TP2-Mod5-Pizza/Views/Pizza/Delete.cshtml
@@ -1,5 +1,4 @@
-﻿@model BO.Pizza
-
+﻿@model TP2_Mod5_Pizza.Models.PizzaIngredientPateVM
 @{
     ViewBag.Title = "Delete";
 }
@@ -7,21 +6,11 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Pizza</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nom)
-        </dt>
+<div class="form-horizontal">
+    @Html.Partial("_PizzaDisplayWithId")
 
-        <dd>
-            @Html.DisplayFor(model => model.Nom)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
