--- a/TP2-Mod5-Pizza/Views/Shared/_PizzaDisplay.cshtml
+++ b/TP2-Mod5-Pizza/Views/Shared/_PizzaDisplay.cshtml
@@ -9,6 +9,7 @@
         @if (Model.Pates != null && Model.Pates.Count > 0)
         {
             @Html.EditorFor(model => model.pizza.Nom, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.pizza, "", new { @class = "text-danger" })
             @Html.ValidationMessageFor(model => model.pizza.Nom, "", new { @class = "text-danger" })
         }
         else
