--- a/TP1-Mod6-Dojo/Views/Samourais/Delete.cshtml
+++ b/TP1-Mod6-Dojo/Views/Samourais/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BODojo.Samourai
+﻿@model TP1_Mod6_Dojo.Models.SamouraiVM
 
 @{
     ViewBag.Title = "Delete";
@@ -11,27 +11,39 @@
     <h4>Samourai</h4>
     <hr />
     <dl class="dl-horizontal">
+
+
         <dt>
-            @Html.DisplayNameFor(model => model.Force)
+            @Html.DisplayNameFor(model => model.Samourai.Force)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Force)
+            @Html.DisplayFor(model => model.Samourai.Force)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Nom)
+            @Html.DisplayNameFor(model => model.Samourai.Nom)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nom)
+            @Html.DisplayFor(model => model.Samourai.Nom)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Samourai.Arme)
+        </dt>
+        <dd>
+
+            @Html.DisplayFor(model => model.Samourai.Arme.Nom)
+
+        </dd>
+
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
-
+        @Html.HiddenFor(model => model.Samourai.Id)
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
