--- a/TP1-Mod6-Dojo/Views/Samourais/Details.cshtml
+++ b/TP1-Mod6-Dojo/Views/Samourais/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BODojo.Samourai
+﻿@model TP1_Mod6_Dojo.Models.SamouraiVM
 
 @{
     ViewBag.Title = "Details";
@@ -11,24 +11,35 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Force)
+            @Html.DisplayNameFor(model => model.Samourai.Force)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Force)
+            @Html.DisplayFor(model => model.Samourai.Force)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Nom)
+            @Html.DisplayNameFor(model => model.Samourai.Nom)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nom)
+            @Html.DisplayFor(model => model.Samourai.Nom)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Samourai.Arme)
+        </dt>
+        <dd>
+
+            @Html.DisplayFor(model => model.Samourai.Arme.Nom)
+
+         </dd>
+
+
+
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Samourai.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
