--- a/TP1-Mod6-Dojo/Views/Samourais/Delete.cshtml
+++ b/TP1-Mod6-Dojo/Views/Samourais/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Etes vous sur de vouloir supprimer cet élément ? </h3>
 <div>
     <h4>Samourai</h4>
     <hr />
@@ -32,10 +32,40 @@
             @Html.DisplayNameFor(model => model.Samourai.Arme)
         </dt>
         <dd>
+            @if (Model.Samourai.Arme != null)
+            {
+                @Html.DisplayFor(model => model.Samourai.Arme.Nom)
+            }
+            else
+            {
+                <div> Pas d'arme</div>}
 
-            @Html.DisplayFor(model => model.Samourai.Arme.Nom)
 
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Samourai.ArtMartials)
+        </dt>
+        <dd>
+            @if (Model.Samourai.ArtMartials.Count > 0)
+            {
+                foreach (var art in Model.Samourai.ArtMartials)
+                {
+                    @Html.DisplayFor(x => art.Nom)<br />
+                }
+            }
+            else
+            {
+                <div> Pas d'arts martiaux</div>}
+
+
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Samourai.Potentiel)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Samourai.Potentiel)
+        </dd>
+
 
 
     </dl>
