--- a/TP1-Mod6-Dojo/Views/Samourais/Edit.cshtml
+++ b/TP1-Mod6-Dojo/Views/Samourais/Edit.cshtml
@@ -35,8 +35,16 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Samourai.Arme, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.ArmeId, Model.Armes.Select(x => new SelectListItem() { Text = x.Nom, Value = x.Id.ToString() }),"Pas d'arme", new { htmlAttributes = new { @class = "form-control" } })
+            @Html.DropDownListFor(model => model.ArmeId, Model.Armes.Select(x => new SelectListItem() { Text = x.Nom, Value = x.Id.ToString() }), "Pas d'arme", new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Armes, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Samourai.ArtMartials, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.ListBoxFor(model => model.ArtMartialsIds, Model.ArtMartialsVM.Select(x => new SelectListItem() { Text = x.Nom, Value = x.Id.ToString() }), new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.ArtMartialsIds, "", new { @class = "text-danger" })
         </div>
     </div>
 
