--- a/TP1-Mod6-Dojo/Views/Samourais/Index.cshtml
+++ b/TP1-Mod6-Dojo/Views/Samourais/Index.cshtml
@@ -17,6 +17,12 @@
         <th>
             @Html.DisplayNameFor(model => model.Nom)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Arme)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ArtMartials)
+        </th>
         <th></th>
     </tr>
 
@@ -30,6 +36,13 @@
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.Arme.Nom)
+    </td>
+    <td>
+        @foreach (var art in item.ArtMartials)
+        {
+            @Html.DisplayFor(x=>art.Nom)<br />
+        }
+       
     </td>
     <td>
         @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
